manifests/staging/frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: staging
  labels:
    app: frontend
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        color: green
    spec:
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/useful-variety-470306-n5/gke-repo/frontend:latest
        ports:
        - containerPort: 80
