manifests/staging/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: staging
spec:
  selector:
    app: backend
    color: blue
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
